source/teacher/.dart_tool/build/generated/angular_test/lib/src/errors/will_never_stabilize.template.module.library
{"isEntrypoint":false,"deps":["angular_test|lib/src/errors/will_never_stabilize.dart"],"parts":[],"conditionalDeps":[],"sdkDeps":[],"hasMain":false}